# photos-manager

./: .env.example  .gitignore  Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml.example
.github/workflows/: ci.yml
photos-manager-cli/: Cargo.toml
photos-manager-cli/src/: main.rs
photos-manager-cli/src/cmds/: border.rs  mod.rs  order.rs
photos-manager-core/: Cargo.toml
photos-manager-core/src/: border.rs  file.rs  lib.rs  order.rs  photo.rs
photos-manager-core/src/utils/: gather_photos.rs  get_created_at.rs  mod.rs  move_photos.rs  read_photo.rs
pictures-manager-cli/: Cargo.toml
pictures-manager-core/: Cargo.toml
scripts/linux/: install_imagemagick.sh
scripts/windows/: dev.bat
