[package]
name = "photos-manager-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to order photos & videos by creation date or add a white border to photos for a more aesthetic library"
keywords = ["command-line-interface", "multimedia", "multimedia::images"]
license = "MIT"
license-file = "../LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
console = "0.15.2"
dirs = "4.0.0"
dotenv = "0.15.0"
indicatif = { version = "0.17.1", features = ["rayon"] }
log = "0.4.17"
photos-manager-core = { path = "../photos-manager-core" }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
snafu = "0.7.3"
strum = "0.24"
strum_macros = "0.24"
