[package]
name = "photos-manager-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
rayon = "1.5.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
snafu = "0.7.3"
