[package]
name = "photos-manager-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
fs_extra = "1.3.0"
kamadak-exif = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.17"
magick_rust = "0.17.0"
pretty_env_logger = "0.4.0"
rayon = "1.5.3"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
snafu = "0.7.3"
walkdir = "2.3.2"
